<resources>
    <string name="app_name">NooTous</string>
    <string name="action_event_management">Event management</string>
    <string name="action_settings">Settings</string>
    <string name="group_fragment_label">Event Name</string>
    <string name="count_fragment_label">Countdown</string>
    <string name="map_fragment_label">Map</string>
    <string name="next">Next</string>
    <string name="group_name_title">Event Name:</string>
    <string name="group_name_hint">Event Name</string>
    <string name="nickname_txt">Nickname:</string>
    <string name="message_txt">Message:</string>
    <string name="warning_txt">(visible to all participants)</string>
    <string name="settings_title">Settings</string>
    <string name="slider_position_label">Blur my position by:</string>
</resources>